# main

./: .gitignore  BigOp.cpp  CMakeLists.txt  Leet.cpp  QT.pro  README.md  YeelightWifiBulbLanCtrl.pro  _hex.h  actor.h  ai_montecarlo.cpp  ai_montecarlo.h  ai_weak.cpp  ai_weak.h  client.cpp  gamewindow.cpp  gamewindow.h  gamewindow.ui  graph.h  hexbutton.cpp  hexbutton.h  human.cpp  human.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  roadEval.h  server.cpp  ui_mainwindow.h  worker.cpp  worker.h  xakaMONTE.cpp
8x8/: 8x8.ino
8x8maze/: 8x8maze.ino
BigOpLib/: CMakeLists.txt  Cleanse.h  CreationChamber.h  Dimension.h  Drone.h  EvolveChamber.h  Existence.h  Life.h  StateViper.h
Client/: client.cpp
LeetLib/: LeetLibrary.h  LeetManager.h
Server/: CMakeLists.txt  server.cpp
buzzerpiano/: buzzerpiano.ino
calibra3lights/: calibra3lights.ino
